traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:30: error: '(' expected but identifier found.
    if !(estDosMur()&&murADroite()) {
       ^